# Pascal-S_Generator

./: .gitignore  CMakeLists.txt  README.md  compile_compare.py  static.py  statistic.py
compiler/: pascc
input/: test.c  test.pas
output/: c_test  pas_test
src/: DeclarationManager.cpp  DeclarationManager.h  StructureGenerator.cpp  StructureGenerator.h  ValueGenerator.cpp  ValueGenerator.h  main.cpp
